test/TestPhases/namecheck/invalid/importShadows.blc
import I "../imports/importMe"
import I "../imports/methods"

@[EntryPoint]
activity Main () ()
    await true
end